Fri May 16 07:18:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux.GNU:
        * include/makeinclude/platform_linux_common.GNU:
          Support lib64 paths to detect certain features. Thanks to Ken
          Sedgwick <ksedgwick at bonsai dot com> for reporting this

        * include/makeinclude/platform_linux.GNU:
          Only set DLD and LD when they are not set yet

Thu May 15 14:00:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Based_Pointer_T.{h,inl}:
        * tests/Based_Pointer_Test.cpp:
          Fixed bugzilla 3285, make it possible to use
          ACE_Based_Pointer<void>. Thanks to Thomas Brownridge
          <thomas dot brownridge at lmco dot com> for reporting this.

Thu May 15 12:36:42 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/MMAP_Memory_Pool.cpp:
          When using a default base address of 0x0 and otherwise wanting
          a fixed address, a special flag was used to imply that after the
          first address is selected the system in a call to ::mmap()
          subsequent calls to ::mmap() reuse the selected base address
          as a fixed address. This may cause problems with reloading
          persistent data if the stored data contains pointers and the
          system selected base address changes from run to run.

        * ace/config-linux-common.h:
          The default base address for the x86-64 platform cannot be 0x0.
          Doing so causes the system to choose an address which for some
          unknown reason causes SEGV errors in Malloc_T. The linux-specific
          mmap flag, MAP_32BIT, resolves those segv errors, but on x86-64
          using 0x0 as the default base address on subsequent runs cause
          a different assigned base address to be selected. If the data
          in the mapped memory contains pointers to mapped memory, those
          are then wrong and cause SEGV crashs. By experimentation, it