@@ -5,7 +5,7 @@
 #define END_TASK_H
 
 // Listing 1 code/ch18
-class EndTask : public BasicTask {
+class TheEndTask : public BasicTask {
 protected:
   virtual int process (Message *)
   {
@@ -16,7 +16,7 @@ protected:
   virtual int next_step (ACE_Message_Block *mb)
   {
     ACE_DEBUG ((LM_DEBUG,
-                ACE_TEXT ("EndTask::next_step() - ")
+                ACE_TEXT ("TheEndTask::next_step() - ")
                 ACE_TEXT ("end of the line.\n")));
     mb->release ();
     return 0;
